--- a/index.html
+++ b/index.html
@@ -455,7 +455,9 @@ I focus on real-world usable systems — not toy demos — combining AI + web + 
   <div class="edu-detail">
     Percentage: 92.8% (Distinction)
   </div>
-  <hr style="margin:18px 0;border:none;border-top:1px solid #e5e7ff;">
+</div>
+
+<div class="card">
   <div class="edu-role">
     <div class="edu-title">Secondary Education (10th Grade)</div>
     <div class="edu-inst">Trinity Lyceum</div>
