--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@ I focus on real-world usable systems — not toy demos — combining AI + web + 
 <h2 class="title">Education</h2>
 <div class="grid">
 
+<!-- College -->
 <div class="card">
   <div class="edu-role">
     <div class="edu-title">B. Tech in Computer Science and Engineering</div>
@@ -446,6 +447,7 @@ I focus on real-world usable systems — not toy demos — combining AI + web + 
   </div>
 </div>
 
+<!-- Higher Secondary -->
 <div class="card">
   <div class="edu-role">
     <div class="edu-title">Higher Secondary Education (Science Stream)</div>
@@ -457,6 +459,7 @@ I focus on real-world usable systems — not toy demos — combining AI + web + 
   </div>
 </div>
 
+<!-- Secondary -->
 <div class="card">
   <div class="edu-role">
     <div class="edu-title">Secondary Education (10th Grade)</div>
