--- a/index.html
+++ b/index.html
@@ -11,7 +11,719 @@
 *{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif;scroll-behavior:smooth;}
 body{
  background:#ffffff;
- color:#111;
+ color:#111;<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Rizwan N — Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif;scroll-behavior:smooth;}
+body{
+ background:#05060a;
+ color:#f5f5f7;
+ overflow-x:hidden;
+}
+
+/* ---------- scroll progress ---------- */
+#progress{
+ position:fixed;
+ top:0;
+ left:0;
+ height:4px;
+ background:linear-gradient(90deg,#8b5bff,#ff007a);
+ width:0%;
+ z-index:9999;
+}
+
+/* ---------- animated gradient bg ---------- */
+.bg{
+ position:fixed;
+ inset:0;
+ z-index:-2;
+ background:radial-gradient(circle at 0 0,#2b1a45 0,#05060a 45%,#05060a 100%);
+ background-size:200% 200%;
+ animation:bgmove 18s infinite linear;
+}
+@keyframes bgmove{
+ 0%{background-position:0 0}
+ 100%{background-position:200% 200%}
+}
+
+/* ---------- floating shapes ---------- */
+.shape{
+ position:fixed;
+ width:220px;
+ height:220px;
+ border-radius:40px;
+ filter:blur(40px);
+ opacity:.18;
+ z-index:-1;
+ animation:float 14s infinite linear;
+}
+.s1{background:#8b5bff; top:10%; left:5%;}
+.s2{background:#ff007a; top:70%; left:10%; animation-duration:20s;}
+.s3{background:#ffb347; top:30%; right:5%; animation-duration:18s;}
+@keyframes float{
+ 0%{transform:translateY(0) rotate(0)}
+ 50%{transform:translateY(-80px) rotate(180deg)}
+ 100%{transform:translateY(0) rotate(360deg)}
+}
+
+/* ---------- cursor spotlight ---------- */
+#spot{
+ position:fixed;
+ width:260px;
+ height:260px;
+ border-radius:50%;
+ pointer-events:none;
+ background:radial-gradient(circle,#ffffff14,transparent 70%);
+ transform:translate(-50%,-50%);
+ z-index:999;
+}
+
+/* ---------- nav ---------- */
+nav{
+ position:sticky;
+ top:0;
+ background:rgba(5,6,10,.92);
+ backdrop-filter:blur(18px);
+ display:flex;
+ justify-content:space-between;
+ align-items:center;
+ padding:18px 40px;
+ z-index:100;
+ box-shadow:0 12px 40px rgba(0,0,0,.75);
+ border-bottom:1px solid rgba(255,255,255,.06);
+}
+nav b{font-weight:800;letter-spacing:.04em;}
+nav a{
+ text-decoration:none;
+ color:#f5f5f7;
+ margin-left:20px;
+ font-weight:600;
+ font-size:14px;
+ position:relative;
+ text-transform:uppercase;
+ letter-spacing:.09em;
+}
+nav a::after{
+ content:'';
+ position:absolute;
+ left:0;
+ bottom:-6px;
+ height:2px;
+ width:0%;
+ background:linear-gradient(90deg,#8b5bff,#ff007a);
+ transition:.3s;
+}
+nav a:hover::after{width:100%;}
+
+/* ---------- hero ---------- */
+.hero{
+ padding:120px 20px 80px;
+ text-align:center;
+ background:transparent;
+}
+.hero img{
+ width:170px;
+ border-radius:50%;
+ box-shadow:0 25px 70px rgba(0,0,0,.8);
+ border:3px solid rgba(255,255,255,.15);
+ transition:.4s;
+}
+.hero img:hover{transform:scale(1.06) rotate(1deg);}
+.hero h1{
+ font-size:42px;
+ font-weight:800;
+ margin-top:25px;
+ background:linear-gradient(90deg,#ffb347,#ff007a);
+ -webkit-background-clip:text;
+ -webkit-text-fill-color:transparent;
+ text-transform:uppercase;
+ letter-spacing:.12em;
+}
+.hero h2{
+ font-size:18px;
+ margin-top:14px;
+ opacity:.9;
+ color:#d4d5e1;
+ text-transform:uppercase;
+ letter-spacing:.18em;
+}
+.typing{
+ font-size:20px;
+ margin-top:16px;
+ opacity:.7;
+ height:30px;
+}
+
+/* ---------- sections ---------- */
+section{
+ padding:90px 8%;
+ opacity:0;
+ transform:translateY(60px);
+ transition:opacity .7s ease,transform .7s ease;
+}
+section.active{
+ opacity:1;
+ transform:translateY(0);
+}
+section.hero{opacity:1;transform:none;}
+
+.title{
+ font-size:30px;
+ font-weight:800;
+ margin-bottom:45px;
+ position:relative;
+ text-transform:uppercase;
+ letter-spacing:.16em;
+ color:#f7f7ff;
+}
+.title::before{
+ content:'';
+ left:-20px;
+ top:8px;
+ width:8px;
+ height:32px;
+ border-radius:4px;
+ position:absolute;
+ background:linear-gradient(180deg,#8b5bff,#ff007a);
+}
+
+/* ---------- glass cards ---------- */
+.card{
+ background:radial-gradient(circle at top left,rgba(255,255,255,.10),rgba(7,8,15,.96));
+ border-radius:24px;
+ padding:32px;
+ box-shadow:0 25px 70px rgba(0,0,0,.85);
+ transition:.35s;
+ position:relative;
+ overflow:hidden;
+ border:1px solid rgba(255,255,255,.08);
+}
+.card::before{
+ content:'';
+ position:absolute;
+ inset:0;
+ background:linear-gradient(120deg,transparent,rgba(255,255,255,.18),transparent);
+ transform:translateX(-120%);
+ transition:.6s;
+}
+.card:hover::before{transform:translateX(120%);}
+.card:hover{transform:translateY(-10px) scale(1.02);}
+
+/* ---------- grid ---------- */
+.grid{
+ display:grid;
+ grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+ gap:34px;
+}
+
+/* ---------- about ---------- */
+.about{
+ font-size:18px;
+ line-height:1.9;
+ color:#e3e3f2;
+}
+
+/* ---------- experience layout ---------- */
+.exp-role{
+ display:flex;
+ justify-content:space-between;
+ align-items:flex-start;
+ margin-bottom:8px;
+}
+.exp-meta{
+ font-size:13px;
+ opacity:.75;
+ color:#b4b4c7;
+}
+.exp-points{
+ margin-top:10px;
+ font-size:15px;
+ line-height:1.8;
+ color:#d6d6e6;
+}
+.exp-points li{
+ margin-left:18px;
+ margin-bottom:4px;
+}
+
+/* ---------- education layout ---------- */
+.edu-role{
+ margin-bottom:6px;
+}
+.edu-title{
+ font-weight:700;
+ font-size:16px;
+ text-transform:uppercase;
+ letter-spacing:.09em;
+ color:#f5f5ff;
+}
+.edu-inst{
+ font-weight:600;
+ font-size:15px;
+ color:#e3d8ff;
+}
+.edu-meta{
+ font-size:13px;
+ opacity:.75;
+ margin-top:2px;
+ color:#b4b4c7;
+}
+.edu-detail{
+ font-size:14px;
+ margin-top:6px;
+ color:#d6d6e6;
+}
+
+/* ---------- skills ---------- */
+.skill-main{
+ background:radial-gradient(circle at top left,rgba(255,255,255,.08),rgba(7,8,15,.96));
+ border-radius:22px;
+ padding:26px;
+ margin-bottom:24px;
+ box-shadow:0 18px 46px rgba(0,0,0,.85);
+ border:1px solid rgba(255,255,255,.08);
+}
+.skill-main h3{
+ margin-bottom:16px;
+ text-transform:uppercase;
+ letter-spacing:.12em;
+ font-size:14px;
+ color:#f5f5ff;
+}
+.bubble{
+ display:inline-block;
+ background:rgba(12,13,24,.96);
+ padding:10px 16px;
+ border-radius:999px;
+ margin:8px;
+ font-size:13px;
+ color:#e8e8ff;
+ box-shadow:0 8px 22px rgba(0,0,0,.8);
+ transition:.25s;
+ border:1px solid rgba(255,255,255,.12);
+}
+.bubble:hover{
+ background:linear-gradient(90deg,#8b5bff,#ff007a);
+ color:#fff;
+ transform:scale(1.1);
+}
+
+/* ---------- buttons ---------- */
+.btn{
+ display:inline-block;
+ padding:14px 22px;
+ border-radius:14px;
+ background:linear-gradient(90deg,#8b5bff,#ff007a);
+ color:#fff;
+ text-decoration:none;
+ font-weight:600;
+ transition:.3s;
+ text-transform:uppercase;
+ letter-spacing:.12em;
+ font-size:12px;
+}
+.btn:hover{
+ transform:translateY(-4px);
+ box-shadow:0 20px 50px rgba(0,0,0,.9);
+}
+
+/* ---------- projects ---------- */
+.project{
+ position:relative;
+ overflow:hidden;
+ cursor:pointer;
+}
+.project-overlay{
+ position:absolute;
+ inset:0;
+ background:linear-gradient(180deg,transparent,rgba(5,6,10,.95));
+ color:#fff;
+ display:flex;
+ align-items:flex-end;
+ padding:24px;
+ transform:translateY(100%);
+ transition:.4s;
+ font-size:13px;
+ text-transform:uppercase;
+ letter-spacing:.12em;
+}
+.project:hover .project-overlay{transform:translateY(0);}
+
+/* ---------- modal for project details ---------- */
+.modal-backdrop{
+ position:fixed;
+ inset:0;
+ background:rgba(0,0,0,.75);
+ display:flex;
+ align-items:center;
+ justify-content:center;
+ z-index:1000;
+ opacity:0;
+ pointer-events:none;
+ transition:opacity .25s ease;
+}
+.modal-backdrop.show{
+ opacity:1;
+ pointer-events:auto;
+}
+.modal{
+ background:#070812;
+ border-radius:22px;
+ max-width:520px;
+ width:90%;
+ padding:24px 26px 22px;
+ box-shadow:0 28px 90px rgba(0,0,0,.95);
+ position:relative;
+ border:1px solid rgba(255,255,255,.12);
+}
+.modal h3{
+ margin-bottom:10px;
+ color:#f7f7ff;
+}
+.modal p{
+ font-size:14px;
+ line-height:1.7;
+ margin-bottom:18px;
+ color:#d6d6e6;
+}
+.modal a{
+ color:#ffb347;
+ font-weight:600;
+ text-decoration:none;
+}
+.modal a:hover{text-decoration:underline;}
+.modal-close{
+ position:absolute;
+ top:10px;
+ right:14px;
+ border:none;
+ background:transparent;
+ font-size:22px;
+ cursor:pointer;
+ color:#ffffffcc;
+}
+</style>
+</head>
+<body>
+
+<div id="progress"></div>
+<div class="bg"></div>
+<div class="shape s1"></div>
+<div class="shape s2"></div>
+<div class="shape s3"></div>
+<div id="spot"></div>
+
+<nav>
+<b>Rizwan N</b>
+<div>
+<a href="#about">About</a>
+<a href="#experience">Experience</a>
+<a href="#education">Education</a>
+<a href="#skills">Skills</a>
+<a href="#projects">Projects</a>
+<a href="#resume">Resume</a>
+<a href="#cert">Certifications</a>
+<a href="#contact">Contact</a>
+</div>
+</nav>
+
+<section class="hero active" id="top">
+<img src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg" alt="Rizwan N">
+<h1>Rizwan N — Portfolio</h1>
+<h2>Associate Software Engineer · Full Stack Developer · Python &amp; C · AI &amp; Automation</h2>
+<div class="typing" id="typing"></div>
+</section>
+
+<section id="about">
+<h2 class="title">About Me</h2>
+<div class="card about">
+Automation-focused developer building AI tools, bots, testing systems, and smart web applications.  
+Specialized in Python automation, job-workflow bots, AI chat systems, and interactive utilities.  
+I focus on real-world usable systems — not toy demos — combining AI + web + scripting for productivity impact.
+</div>
+</section>
+
+<section id="experience">
+<h2 class="title">Experience</h2>
+<div class="grid">
+
+<div class="card">
+<div class="exp-role">
+  <div>
+    <h3>SEO Executive</h3>
+    <div class="exp-meta">Cyberfox Solutions · Bangalore, India</div>
+  </div>
+  <div class="exp-meta">04/2025 – Present</div>
+</div>
+<ul class="exp-points">
+  <li>Built Python automation tools for backlink validation and SERP rank tracking.</li>
+  <li>Developed a multi-page metadata crawler for technical SEO audits.</li>
+  <li>Automated GA4 and Search Console reporting workflows with data scripts.</li>
+</ul>
+</div>
+
+<div class="card">
+<div class="exp-role">
+  <div>
+    <h3>Web Developer Intern</h3>
+    <div class="exp-meta">Cyberfox Solutions · Kochi, India</div>
+  </div>
+  <div class="exp-meta">08/2024 – 02/2025</div>
+</div>
+<ul class="exp-points">
+  <li>Developed and customized WordPress websites for client requirements.</li>
+  <li>Implemented responsive UI with HTML, CSS, and JavaScript.</li>
+  <li>Configured plugins and optimized site performance before deployment.</li>
+</ul>
+</div>
+
+</div>
+</section>
+
+<section id="education">
+<h2 class="title">Education</h2>
+<div class="grid">
+
+<!-- College -->
+<div class="card">
+  <div class="edu-role">
+    <div class="edu-title">B. Tech in Computer Science and Engineering</div>
+    <div class="edu-inst">College of Engineering and Management Punnapra</div>
+    <div class="edu-meta">Alappuzha, India · 2020 – 2024</div>
+  </div>
+  <div class="edu-detail">
+    CGPA: 8.78<br>
+    College Topper of 2020–24 Batch
+  </div>
+</div>
+
+<!-- Higher Secondary -->
+<div class="card">
+  <div class="edu-role">
+    <div class="edu-title">Higher Secondary Education (Science Stream)</div>
+    <div class="edu-inst">G.H.S.S Quilon West</div>
+    <div class="edu-meta">Kollam, India · 2018 – 2020</div>
+  </div>
+  <div class="edu-detail">
+    Percentage: 92.8% (Distinction)
+  </div>
+</div>
+
+<!-- Secondary -->
+<div class="card">
+  <div class="edu-role">
+    <div class="edu-title">Secondary Education (10th Grade)</div>
+    <div class="edu-inst">Trinity Lyceum</div>
+    <div class="edu-meta">Kollam, India · 2017 – 2018</div>
+  </div>
+  <div class="edu-detail">
+    Percentage: 90%
+  </div>
+</div>
+
+</div>
+</section>
+
+<section id="skills">
+<h2 class="title">Skills</h2>
+
+<div class="skill-main">
+<h3>Languages</h3>
+<span class="bubble">Python</span>
+<span class="bubble">C</span>
+<span class="bubble">Java</span>
+<span class="bubble">JavaScript</span>
+</div>
+
+<div class="skill-main">
+<h3>Web</h3>
+<span class="bubble">HTML</span>
+<span class="bubble">CSS</span>
+<span class="bubble">Flask</span>
+<span class="bubble">REST APIs</span>
+</div>
+
+<div class="skill-main">
+<h3>Databases</h3>
+<span class="bubble">MySQL</span>
+</div>
+
+<div class="skill-main">
+<h3>Additional</h3>
+<span class="bubble">Automation</span>
+<span class="bubble">Selenium</span>
+<span class="bubble">Debugging</span>
+<span class="bubble">Git &amp; GitHub</span>
+<span class="bubble">VS Code</span>
+</div>
+
+</section>
+
+<section id="projects">
+<h2 class="title">Projects</h2>
+<div class="grid">
+
+<div class="card project"
+     data-title="AI Guardian — Mental Health Chatbot"
+     data-desc="NLP-based mental health chatbot using Python, TensorFlow, Flask, and MySQL with intent classification and emotion detection."
+     data-link="https://github.com/RizwanB312/Mental-Health-Chatbot/blob/main/README.md">
+<h3>AI Guardian — Mental Health Chatbot</h3>
+<div class="project-overlay">Click to view details</div>
+</div>
+
+<div class="card project"
+     data-title="Automated Naukri Job Scraper & Auto-Apply Bot"
+     data-desc="Selenium-based bot that scrapes Naukri listings, filters roles, and auto-applies with retry logic and tracking."
+     data-link="https://github.com/RizwanB312/Naukri-bot/blob/main/README.md">
+<h3>Automated Naukri Job Scraper &amp; Auto-Apply Bot</h3>
+<div class="project-overlay">Click to view details</div>
+</div>
+
+<div class="card project"
+     data-title="AI Mouse — Hand Gesture Control"
+     data-desc="Real-time hand gesture-based mouse control using OpenCV, MediaPipe, and PyAutoGUI."
+     data-link="https://github.com/RizwanB312">
+<h3>AI Mouse — Hand Gesture Control</h3>
+<div class="project-overlay">Click to view details</div>
+</div>
+
+</div>
+</section>
+
+<section id="resume">
+<h2 class="title">Resume</h2>
+<div class="grid">
+  <div class="card">
+    <a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf">
+      Full Stack Developer
+    </a>
+  </div>
+  <div class="card">
+    <a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf">
+      Associate Software Developer
+    </a>
+  </div>
+</div>
+</section>
+
+<section id="cert">
+<h2 class="title">Certifications</h2>
+<div class="card">
+<strong>AI Mastery Program — Be10x</strong><br><br>
+Completed training in AI-assisted development, automation workflows, and data tools.<br>
+Covered Python with AI tools, SQL, Power BI, AI-powered web/app development, and automation platforms.<br>
+Applied AI-assisted techniques for productivity, data handling, and technical workflow optimization.<br><br>
+<a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf">View Certificate</a>
+</div>
+</section>
+
+<section id="contact">
+<h2 class="title">Contact</h2>
+<div class="card">
+📞 +91 7907075183<br>
+📧 rizwannowfal001@gmail.com<br>
+📍 Bangalore, India<br>
+GitHub: <a href="https://github.com/RizwanB312">RizwanB312</a><br>
+LinkedIn: <a href="https://www.linkedin.com/in/rizwan-n-72955234a">linkedin.com/in/rizwan-n-72955234a</a>
+</div>
+</section>
+
+<!-- modal -->
+<div class="modal-backdrop" id="projectModal">
+  <div class="modal">
+    <button class="modal-close" id="modalClose">&times;</button>
+    <h3 id="modalTitle"></h3>
+    <p id="modalDesc"></p>
+    <a id="modalLink" href="#">View project</a>
+  </div>
+</div>
+
+<script>
+// spotlight
+const spot=document.getElementById('spot');
+document.addEventListener('mousemove',e=>{
+ spot.style.left=e.clientX+'px';
+ spot.style.top=e.clientY+'px';
+});
+
+// scroll progress
+window.addEventListener('scroll',()=>{
+ const h=document.documentElement;
+ const sc=(h.scrollTop)/(h.scrollHeight-h.clientHeight)*100;
+ document.getElementById('progress').style.width=sc+'%';
+});
+
+// show only one section at a time
+const sections=[...document.querySelectorAll('section')];
+function updateActiveSection(){
+ const viewportMid=window.innerHeight/2;
+ let closest=null;
+ let closestDist=Infinity;
+
+ sections.forEach(sec=>{
+   const rect=sec.getBoundingClientRect();
+   const secMid=rect.top+rect.height/2;
+   const dist=Math.abs(secMid-viewportMid);
+   if(dist<closestDist){
+     closestDist=dist;
+     closest=sec;
+   }
+ });
+
+ sections.forEach(sec=>{
+   if(sec===closest){
+     sec.classList.add('active');
+   }else if(!sec.classList.contains('hero')){
+     sec.classList.remove('active');
+   }
+ });
+}
+updateActiveSection();
+window.addEventListener('scroll',updateActiveSection);
+
+// typing disabled
+const text="";
+let i=0;
+function type(){
+ if(i<text.length){
+   document.getElementById('typing').innerHTML+=text[i++];
+   setTimeout(type,60);
+ }
+}
+type();
+
+// project modal
+const modal=document.getElementById('projectModal');
+const modalTitle=document.getElementById('modalTitle');
+const modalDesc=document.getElementById('modalDesc');
+const modalLink=document.getElementById('modalLink');
+const modalClose=document.getElementById('modalClose');
+
+document.querySelectorAll('.project').forEach(card=>{
+ card.addEventListener('click',()=>{
+   modalTitle.textContent=card.dataset.title;
+   modalDesc.textContent=card.dataset.desc;
+   modalLink.href=card.dataset.link;
+   modal.classList.add('show');
+ });
+});
+
+modalClose.addEventListener('click',()=>modal.classList.remove('show'));
+modal.addEventListener('click',e=>{
+ if(e.target===modal){modal.classList.remove('show');}
+});
+</script>
+
+</body>
+</html>
+
  overflow-x:hidden;
 }
 
