--- a/index.html
+++ b/index.html
@@ -95,8 +95,18 @@ nav{
  z-index:100;
  box-shadow:0 12px 40px rgba(0,0,0,.75);
  border-bottom:1px solid rgba(255,255,255,.06);
+ white-space: nowrap; /* Ensures nav content stays on one line */
 }
-nav b{font-weight:800;letter-spacing:.04em;}
+/* Futuristic Brand Color for Name */
+nav b{
+ font-weight:800;
+ letter-spacing:.08em;
+ background: linear-gradient(90deg, #00f2ff, #8b5bff);
+ -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+ text-transform: uppercase;
+ font-size: 20px;
+}
 nav a{
  text-decoration:none;
  color:#f5f5f7;
@@ -178,7 +188,11 @@ section.hero{opacity:1;transform:none;}
  position:relative;
  text-transform:uppercase;
  letter-spacing:.16em;
- color:#f7f7ff;
+ /* Futuristic Gradient for All Section Titles */
+ background: linear-gradient(90deg, #00f2ff, #8b5bff, #ff007a);
+ -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+ display: inline-block;
 }
 .title::before{
  content:'';
@@ -212,6 +226,12 @@ section.hero{opacity:1;transform:none;}
 }
 .card:hover::before{transform:translateX(120%);}
 .card:hover{transform:translateY(-10px) scale(1.02); border-color: rgba(0,242,255,0.3);}
+
+/* Card Headings */
+.card h3 {
+ color: #00f2ff;
+ text-shadow: 0 0 10px rgba(0, 242, 255, 0.2);
+}
 
 /* ---------- grid ---------- */
 .grid{
@@ -259,7 +279,8 @@ section.hero{opacity:1;transform:none;}
  font-size:16px;
  text-transform:uppercase;
  letter-spacing:.09em;
- color:#f5f5ff;
+ color:#00f2ff; /* Futuristic Cyan */
+ text-shadow: 0 0 8px rgba(0, 242, 255, 0.2);
 }
 .edu-inst{
  font-weight:600;
@@ -292,7 +313,7 @@ section.hero{opacity:1;transform:none;}
  text-transform:uppercase;
  letter-spacing:.12em;
  font-size:14px;
- color:#f5f5ff;
+ color:#00f2ff; /* Futuristic Cyan */
 }
 .bubble{
  display:inline-block;
@@ -382,7 +403,7 @@ section.hero{opacity:1;transform:none;}
 }
 .modal h3{
  margin-bottom:10px;
- color:#f7f7ff;
+ color:#00f2ff; /* Futuristic Cyan */
 }
 .modal p{
  font-size:14px;
@@ -441,8 +462,8 @@ section.hero{opacity:1;transform:none;}
 <section id="about">
 <h2 class="title">About Me</h2>
 <div class="card about">
-Automation-focused developer building AI tools, bots, testing systems, and smart web applications.  
-Specialized in Python automation, job-workflow bots, AI chat systems, and interactive utilities.  
+Automation-focused developer building AI tools, bots, testing systems, and smart web applications.  
+Specialized in Python automation, job-workflow bots, AI chat systems, and interactive utilities.  
 I focus on real-world usable systems — not toy demos — combining AI + web + scripting for productivity impact.
 </div>
 </section>
