--- a/index.html
+++ b/index.html
@@ -473,15 +473,17 @@ I focus on real-world usable systems — not toy demos — combining AI + web + 
 <div class="card">
 <div class="exp-role">
   <div>
-    <h3>SEO Executive</h3>
+    <h3>Technical Analyst</h3>
     <div class="exp-meta">Cyberfox Solutions · Bangalore, India</div>
   </div>
   <div class="exp-meta">04/2025 – Present</div>
 </div>
 <ul class="exp-points">
-  <li>Built Python automation tools for backlink validation and SERP rank tracking.</li>
-  <li>Developed a multi-page metadata crawler for technical SEO audits.</li>
-  <li>Automated GA4 and Search Console reporting workflows with data scripts.</li>
+  <li>Conducted technical website audits focusing on crawlability, indexing, and on-page structure</li>
+  <li>Built Python automation tools for backlink validation and metadata extraction</li>
+  <li>Developed a multi-page crawler to streamline technical SEO audits</li>
+  <li>Automated GA4 and Search Console data extraction workflows using Python scripts</li>
+  <li>Structured and processed web performance data for reporting and analysis</li>
 </ul>
 </div>
 
