--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@ I focus on real-world usable systems — not toy demos — combining AI + web + 
   <li>Conducted technical website audits focusing on crawlability, indexing, and on-page structure</li>
   <li>Built Python automation tools for backlink validation and metadata extraction</li>
   <li>Developed a multi-page crawler to streamline technical SEO audits</li>
-  <li>Automated GA4 and Search Console data extraction workflows using Python scripts</li>
-  <li>Structured and processed web performance data for reporting and analysis</li>
+  <li>Automated GA4 and Search Console data extraction into summarized CSV reports using Python.</li>
+
 </ul>
 </div>
 
