--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ I focus on real-world usable systems — not toy demos — combining AI + web + 
 <div class="exp-role">
   <div>
     <h3>Web Developer Intern</h3>
-    <div class="exp-meta">Cyberfox Solutions · Kochi, India</div>
+    <div class="exp-meta">Cyberfox Solutions · Bangalore, India</div>
   </div>
   <div class="exp-meta">08/2024 – 02/2025</div>
 </div>
